--- a/signin.html
+++ b/signin.html
@@ -17,7 +17,7 @@
                     <h2 class="heading">Sign in</h2>
                     <p class="account">Don't have a account? <a href="">Register here</a></p>
                     <form action="" class="form">
-                        <label for="email" class="relative">
+                        <label for="email">
                             <svg class="email-icon" width="18" height="18" viewBox="0 0 18 18" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -28,7 +28,7 @@
                             </svg>
                             <input type="email" id="email" placeholder="Email">
                         </label>
-                        <label for="password" class="relative">
+                        <label for="password">
                             <svg class="lock-icon" width="18" height="18" viewBox="0 0 18 18" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -55,7 +55,7 @@
                             </svg>
 
                         </label>
-                        <div class="d-flex  pt-12 relative">
+                        <div class="d-flex pt-12">
                             <div class="d-flex align-items-center">
                                 <input type="checkbox" id="remember">
                                 <label for="remember">Remember me</label>
@@ -109,7 +109,9 @@
                     </form>
                 </div>
                 <div class="col-12 col-xl-6 d-flex align-items-center justify-content-center relative">
+                    <div class="z-1 relative">
 
+                    </div>
                 </div>
             </div>
         </div>
