--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="container">
             <img src="./assets/image/png/Logo-2.png" alt="Logo-2">
             <div class="row">
-                <div class="col-12 col-lg-6 mb-24">
+                <div class="col-12 col-xl-6 mb-24">
                     <h1 class="sign-heading">Sign in</h1>
                     <p class="account">Don’t have an account? <a href="#">Register here</a></p>
                     <form action="" class="form">
@@ -109,7 +109,7 @@
                         </button>
                     </form>
                 </div>
-                <div class="col-12 col-lg-6 position-relative">
+                <div class="col-12 col-xl-6 position-relative">
                     <img src="./assets/image/png/Ellipse 8.png" alt="circle-image" class="circle-image">
                     <img src="./assets/image/png/Group.png" alt="group">
                     <img src="./assets/image/png/Union.png" alt="union">
@@ -121,11 +121,25 @@
                     <a href="#"><img src="./assets/image/png/twitter-icon.png" alt="social-icons" class="icon-4"></a>
                     <!-- </div> -->
                 </div>
-                
+
             </div>
         </div>
     </section>
-
+    <!-- <div class="max-sm:flex max-sm:gap-3 max-sm:flex-col">
+        <img src="./assets/images/comb-group-2.png" alt="comb-group"
+            class=" sm:hidden max-h-[380px]">
+        <div class="flex justify-between gap-3">
+            <a href="" class="icon-box sm:absolute bottom-0 sm:top-[64px]"><img
+                    src="./assets/images/svg/fb.svg" alt="facebook icon">
+            </a>
+            <a href="" class="icon-box sm:absolute bottom-0 sm:top-[160px]"> <img
+                    src="./assets/images/svg/insta.svg" alt="instagram icon"></a>
+            <a href="" class="icon-box sm:absolute bottom-0 sm:bottom-[160px] "> <img
+                    src="./assets/images/svg/linkedin.svg" alt="linkedin icon"></a>
+            <a href="" class="icon-box sm:absolute bottom-0 sm:bottom-[70px]"> <img
+                    src="./assets/images/svg/twitter.svg" alt="twitter icon"></a>
+        </div>
+    </div> -->
 </body>
 
 </html>
