--- a/signin.html
+++ b/signin.html
@@ -10,12 +10,12 @@
 
 <body>
     <section class="min-vh-100 d-flex align-items-center relative bg-image">
-        <div class="container mx-auto w-100 px-12 relative z-1">
+        <div class="container relative z-1">
             <a href="#"><img src="./assets/image/png/Logo-2.png" alt="logo"></a>
             <div class="row">
-                <div class="col-12 col-xl-6">
+                <div class="col-12 col-lg-6">
                     <h2 class="heading">Sign in</h2>
-                    <p class="account">Don't have a account? <a href="">Register here</a></p>
+                    <p class="account">Don't have a account? <a href="#">Register here</a></p>
                     <form action="" class="form">
                         <label for="email">
                             <svg class="email-icon" width="18" height="18" viewBox="0 0 18 18" fill="none"
@@ -108,9 +108,24 @@
                         </button>
                     </form>
                 </div>
-                <div class="col-12 col-xl-6 d-flex align-items-center justify-content-center relative">
-                    <div class="z-1 relative ">
-
+                <div class="col-12 col-lg-6 d-flex align-items-center justify-content-right relative">
+                    <div class="z-1 relative py-36">
+                        <img src="./assets/image/png/Ellipse 8.png" alt="blue-circle-img"
+                            class="blue-circle-img hidden">
+                        <img src="./assets/image/png/Group.png" alt="group-img" class="group-img hidden">
+                        <img src="./assets/image/png/Union.png" alt="union" class="union">
+                        <img src="./assets/image/png/Group 43143.png" alt="" class="union">
+                        <div class="d-flex justify-content-between gap-3">
+                            <a href="" class="icon-box sm:absolute bottom-0 sm:top-[64px]"><img
+                                    src="./assets/image/png/facebook-icon.png" alt="facebook icon">
+                            </a>
+                            <a href="" class="icon-box sm:absolute bottom-0 sm:top-[160px]"> <img
+                                    src="./assets/image/png/instagram-icon.png" alt="instagram icon"></a>
+                            <a href="" class="icon-box sm:absolute bottom-0 sm:bottom-[160px] "> <img
+                                    src="./assets/image/png/in-icon.png" alt="linkedin icon"></a>
+                            <a href="" class="icon-box sm:absolute bottom-0 sm:bottom-[70px]"> <img
+                                    src="./assets/image/png/twitter-icon.png" alt="twitter icon"></a>
+                        </div>
                     </div>
                 </div>
             </div>
