social-icon set

--- a/signin.html
+++ b/signin.html
@@ -10,7 +10,7 @@
 
 <body>
     <section class="min-vh-100 d-flex align-items-center relative bg-image">
-        <div class="container relative z-1">
+        <div class="container w-100 mx-auto px-12 relative z-1">
             <a href="#"><img src="./assets/image/png/Logo-2.png" alt="logo"></a>
             <div class="row">
                 <div class="col-12 col-lg-6">
@@ -110,21 +110,20 @@
                 </div>
                 <div class="col-12 col-lg-6 d-flex align-items-center justify-content-right relative">
                     <div class="z-1 relative py-36">
-                        <img src="./assets/image/png/Ellipse 8.png" alt="blue-circle-img"
-                            class="blue-circle-img hidden">
-                        <img src="./assets/image/png/Group.png" alt="group-img" class="group-img hidden">
+                        <img src="./assets/image/png/Ellipse 8.png" alt="blue-circle-img" class="blue-circle-img">
+                        <img src="./assets/image/png/Group.png" alt="group-img" class="group-img">
                         <img src="./assets/image/png/Union.png" alt="union" class="union">
-                        <img src="./assets/image/png/Group 43143.png" alt="" class="union">
+                        <img src="./assets/image/png/Group 43143.png" alt="" class="group-photo">
                         <div class="d-flex justify-content-between gap-3">
-                            <a href="" class="icon-box sm:absolute bottom-0 sm:top-[64px]"><img
-                                    src="./assets/image/png/facebook-icon.png" alt="facebook icon">
+                            <a href="" class="icon-facebook"><img src="./assets/image/png/facebook-icon.png"
+                                    alt="facebook icon">
                             </a>
-                            <a href="" class="icon-box sm:absolute bottom-0 sm:top-[160px]"> <img
-                                    src="./assets/image/png/instagram-icon.png" alt="instagram icon"></a>
-                            <a href="" class="icon-box sm:absolute bottom-0 sm:bottom-[160px] "> <img
-                                    src="./assets/image/png/in-icon.png" alt="linkedin icon"></a>
-                            <a href="" class="icon-box sm:absolute bottom-0 sm:bottom-[70px]"> <img
-                                    src="./assets/image/png/twitter-icon.png" alt="twitter icon"></a>
+                            <a href="" class="icon-instagram"> <img src="./assets/image/png/instagram-icon.png"
+                                    alt="instagram icon"></a>
+                            <a href="" class="icon-linkedin"> <img src="./assets/image/png/in-icon.png"
+                                    alt="linkedin icon"></a>
+                            <a href="" class="icon-twitter"> <img src="./assets/image/png/twitter-icon.png"
+                                    alt="twitter icon"></a>
                         </div>
                     </div>
                 </div>
