circle image set

--- a/signin.html
+++ b/signin.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <section class="min-vh-100 d-flex align-items-center relative bg-image">
-        <div class="container w-100 mx-auto px-12 relative z-1">
+    <section class="min-vh-100 d-flex align-items-center justify-content-center relative bg-image">
+        <div class="container w-100 relative z-1">
             <a href="#"><img src="./assets/image/png/Logo-2.png" alt="logo"></a>
             <div class="row">
                 <div class="col-12 col-lg-6">
