--- a/signin.html
+++ b/signin.html
@@ -10,13 +10,13 @@
 
 <body>
     <section class="min-vh-100 d-flex align-items-center justify-content-center relative bg-image">
-        <div class="container w-100 relative z-1">
-            <a href="#"><img src="./assets/image/png/Logo-2.png" alt="logo"></a>
+        <div class="container w-100  relative z-1">
+            <a href="#" class="Postalott-logo"><img src="./assets/image/png/Logo-2.png" alt="Logo-2"></a>
             <div class="row">
-                <div class="col-12 col-lg-6">
+                <div class="col-12 col-xl-6 mx-auto mb-24">
                     <h2 class="heading">Sign in</h2>
                     <p class="account">Don't have a account? <a href="#">Register here</a></p>
-                    <form action="" class="form">
+                    <form>
                         <label for="email">
                             <svg class="email-icon" width="18" height="18" viewBox="0 0 18 18" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -55,7 +55,7 @@
                             </svg>
 
                         </label>
-                        <div class="d-flex pt-12">
+                        <div class="layout">
                             <div class="d-flex align-items-center">
                                 <input type="checkbox" id="remember">
                                 <label for="remember">Remember me</label>
@@ -108,7 +108,7 @@
                         </button>
                     </form>
                 </div>
-                <div class="col-12 col-lg-6 d-flex align-items-center justify-content-right relative">
+                <div class="col-12 col-xl-6 d-flex align-items-center justify-content-right relative">
                     <div class="z-1 relative py-36">
                         <img src="./assets/image/png/Ellipse 8.png" alt="blue-circle-img" class="blue-circle-img">
                         <img src="./assets/image/png/Group.png" alt="group-img" class="group-img">
@@ -116,14 +116,14 @@
                         <img src="./assets/image/png/Group 43143.png" alt="" class="group-photo">
                         <div class="d-flex justify-content-between gap-3">
                             <a href="" class="icon-facebook"><img src="./assets/image/png/facebook-icon.png"
-                                    alt="facebook icon">
+                                    alt="social-icon">
                             </a>
                             <a href="" class="icon-instagram"> <img src="./assets/image/png/instagram-icon.png"
-                                    alt="instagram icon"></a>
+                                    alt="social-icon"></a>
                             <a href="" class="icon-linkedin"> <img src="./assets/image/png/in-icon.png"
-                                    alt="linkedin icon"></a>
+                                    alt="social-icon"></a>
                             <a href="" class="icon-twitter"> <img src="./assets/image/png/twitter-icon.png"
-                                    alt="twitter icon"></a>
+                                    alt="social-icon"></a>
                         </div>
                     </div>
                 </div>
